# sequoia

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  README.md  TODO.todo
sequoia-docs/: .gitignore  CMakeLists.txt  README.md
sequoia-docs/cmake/: AddDoxygen.cmake  AddPython3.cmake  AddSphinx.cmake  SequoiaDocsOptions.cmake
sequoia-docs/sphinx/: .gitignore  CMakeLists.txt  Readme  cmake.py  conf.py  index.rst  sequoia-cmake-generate.cmake.in  sequoia-cmake.rst  sequoia-cmake.rst.in  sequoia-engine.rst
sequoia-docs/sphinx/sequoia-cmake/: .gitignore  SequoiaAddTargetCleanAll.rst  SequoiaCMakeInit.rst  SequoiaGetScriptDir.rst  SequoiaIncludeGuard.rst
sequoia-docs/src/: .gitignore  CMakeLists.txt  cmake.py  sequoia-cmake-generate.cmake.in  sequoia-engine-doxyfile.in  sequoia-engine-mainpage.dox  sequoia-engine.rst
sequoia-editor/: CMakeLists.txt  LICENSE.txt
sequoia-editor/cmake/: AddQt5.cmake  SequoiaCMakeInit.cmake  SequoiaEditorDefinitions.cmake  SequoiaEditorOptions.cmake  SequoiaEditorSetCXXFlags.cmake  SequoiaEditorVersion.cmake
sequoia-editor/src/: CMakeLists.txt
sequoia-editor/src/sequoia-editor/: CMakeLists.txt
sequoia-editor/src/sequoia-editor/Core/: CMakeLists.txt  Config.h.cmake  Export.h  QtErrorHandler.cpp  QtErrorHandler.h  Test.cpp
sequoia-editor/src/sequoia-editor/Driver/: CMakeLists.txt  Main.cpp
sequoia-engine/: .gitignore  CMakeLists.txt  README.md  TODO.todo  replace.sh
sequoia-engine/cmake/: AddBackward.cmake  AddBlaze.cmake  AddBoost.cmake  AddCppcheck.cmake  AddD3D12.cmake  AddDX12.cmake  AddFreeImage.cmake  AddGLFW.cmake  AddGLSLangValidator.cmake  AddGTest.cmake  AddOGRE.cmake  AddOIS.cmake  AddOpenCV.cmake  AddOpenGL.cmake  AddProtobuf.cmake  AddPython3.cmake  AddSFML.cmake  AddTBB.cmake  AddThreads.cmake  Addassimp.cmake  Addbenchmark.cmake  Addccache.cmake  Addcereal.cmake  Addclang-format.cmake  Addfmt.cmake  Addglbinding.cmake  Addglfw3.cmake  Addgli.cmake  Addglm.cmake  Addpugixml.cmake  Addspdlog.cmake  Addstb.cmake  Addtinyobjloader.cmake  SequoiaDefinitions.cmake  SequoiaEngineAssembleShaders.cmake  SequoiaEngineDefinitions.cmake  SequoiaEngineFunctions.cmake  SequoiaEngineGenerateConfig.cmake  SequoiaEngineOptions.cmake  SequoiaEngineSetCXXFlags.cmake  (+8 more)
sequoia-engine/cmake/modules/: FindBackward.cmake  FindBlaze.cmake  FindCppcheck.cmake  FindFreeImage.cmake  FindGLFW.cmake  FindGLSLangValidator.cmake  FindLibDL.cmake  FindOGRE.cmake  FindOIS.cmake  FindTBB.cmake  Findccache.cmake  Findglbinding.cmake  Findglm.cmake  Findstb.cmake
sequoia-engine/cmake/scripts/: CleanAll.cmake  SequoiaEngineAssembleShaders-Script.cmake.in  run-clang-format.sh
sequoia-engine/cmake/templates/: SequoiaEngineConfig.cmake.in
sequoia-engine/docs/: CMakeLists.txt
sequoia-engine/docs/doxygen/: Doxyfile.in  Mainpage.dox
sequoia-engine/ressource/: CMakeLists.txt
sequoia-engine/ressource/assets/shader/: Default.vert
sequoia-engine/ressource/shaders/: Default.vert
sequoia-engine/ressources/shaders/: Default.frag  Default.vert
sequoia-engine/scripts/vertex-gen/: vertex-gen.py
sequoia-engine/src/: CMakeLists.txt  replace.sh
sequoia-engine/src/sequoia/: CMakeLists.txt
sequoia-engine/src/sequoia-engine/: CMakeLists.txt
sequoia-engine/src/sequoia-engine/Core/: AlignedADT.h  Any.h  ArrayRef.h  Assert.cpp  Assert.h  Buffer.cpp  Buffer.h  Byte.h  CMakeLists.txt  Casting.h  Color.cpp  Color.h  CommandLine.cpp  CommandLine.h  Compiler.h  ConcurrentADT.h  Config.h.cmake  DoubleBuffered.h  ErrorHandler.cpp  ErrorHandler.h  Exception.cpp  Exception.h  Export.h  File.cpp  File.h  FileBuffer.cpp  FileBuffer.h  FileSystem.cpp  FileSystem.h  FileType.inc  Format.h  Future.h  Hash.h  HostBuffer.cpp  HostBuffer.h  Image.cpp  Image.h  Listenable.h  Logging.cpp  Logging.h  (+44 more)
sequoia-engine/src/sequoia-engine/Driver/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  CommandLine2.cpp  CommandLine2.h  ConsoleLogger.cpp  ConsoleLogger.h  Driver.cpp  Driver.h  Options.json  Win32Console.cpp  Win32Console.h
sequoia-engine/src/sequoia-engine/Game/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  CameraController.cpp  CameraController.h  CameraControllerFree.cpp  CameraControllerFree.h  Drawable.cpp  Drawable.h  Emittable.cpp  Emittable.h  Exception.h  Game.cpp  Game.h  GameFwd.h  Keymap.cpp  Keymap.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Options.json  PointLight.cpp  PointLight.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SceneNode.cpp  SceneNode.h  SceneNodeAlloc.h  SceneNodeCapability.h  Shape.cpp  Shape.h  ShapeManager.cpp  ShapeManager.h
sequoia-engine/src/sequoia-engine/Math/: AxisAlignedBox.cpp  AxisAlignedBox.h  CMakeLists.txt  Constants.h  CoordinateSystem.h  Export.h  Math.cpp  Math.h  MathFwd.h
sequoia-engine/src/sequoia-engine/Render/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  DrawCallContext.h  DrawCommand.cpp  DrawCommand.h  DrawCommandList.cpp  DrawCommandList.h  DrawContext.h  DrawScene.h  Exception.h  FrameBuffer.cpp  FrameBuffer.h  FrameListener.h  Input.h  (+76 more)
sequoia-engine/test/: CMakeLists.txt
sequoia-engine/test/benchmark/: BenchmarkGLRenderer.cpp  BenchmarkSceneNode.cpp  BenchmarkUniformVariable.cpp  BenchmarkVertexAdapter.cpp  CMakeLists.txt
sequoia-engine/test/sequoia/: CMakeLists.txt
sequoia-engine/test/unittest/: CMakeLists.txt
sequoia-engine/tools/: benchmark-env.py
sequoia-engine/tools/license-update/: license-update.py
sequoia-engine/tools/opt-gen/: opt-gen.py
sequoia-engine/tools/sequoia-opt-gen/: sequoia-opt-gen.py
sequoia-engine/unittest/: CMakeLists.txt
sequoia-engine/unittest/sequoia/: CMakeLists.txt
sequoia-engine/unittest/unittest/: CMakeLists.txt  Environment.cpp  Environment.h
sequoia-examples/: CMakeLists.txt
sequoia-examples/cmake/: AddSequoiaEngine.cmake  SequoiaExamplesDefinitions.cmake  SequoiaExamplesOptions.cmake  SequoiaExamplesSetCXXFlags.cmake
sequoia-examples/src/: CMakeLists.txt
sequoia-examples/src/sandbox/: CMakeLists.txt  Sandbox.cpp  sandbox.cpp
sequoia-examples/src/sequoia-examples/: CMakeLists.txt
(+777 files in other folders)
